--- a/template.html
+++ b/template.html
@@ -2,6 +2,7 @@
 <head>
     <title>Sample Template</title>
     <script src="jquery-3.4.1.min.js"></script>
+    <meta charset="utf-8">
 </head>
 <body>
     <div id="poem-div"></div>
